fix scrollbar thumbnail color

--- a/src/scss/config/_colors.scss
+++ b/src/scss/config/_colors.scss
@@ -2,11 +2,10 @@
 $base-colors: (
     base: #0a0a0a,
     dark: #000,
+    darker: #484848,
     light: #FFF,
     border: #242424,
     copy: #e8e8e8,
-    offdark: #191a1a,
-    offlight: #484848,
     darkcopy: #8e8e8e,
     link: #00ccff,
     danger: red,
@@ -16,7 +15,7 @@ $base-colors: (
 
 // Extended colors
 $extended-colors: (
-    link-hover: darken(map-get($base-colors, link), 12%), // #009bc2
+    link-hover: darken(map-get($base-colors, link), 12%),
     offlight: darken(map-get($base-colors, light), 12%),
     offdark: lighten(map-get($base-colors, dark), 12%)
 );
