--- a/src/scss/config/_defaults.scss
+++ b/src/scss/config/_defaults.scss
@@ -129,7 +129,7 @@ $scrollbarWidth: 10px;
 
 }
 ::-webkit-scrollbar-thumb {
-    background: color(offlight);
+    background: color(darker);
     &:hover {
         background: color(link);
     }
